--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="bar"></div>
             </div>
             <nav class="mobile-nav">
-                <a class="link" href="#Projects">Services</a>
+                <a class="link" href="projects">Services</a>
                 <a class="link" href="#Services">Projects</a>
                 <a class="link" href="#Contact">Contact</a>
             </nav>
